{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Mov",
            "id": "a4551e82-56a8-43c3-a4c7-26d87d6f17a6",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f874e55f-9106-4cc8-8b7a-1cf5137bb308",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "edad253d-3695-40f8-90a8-8472e68b2999",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gam1",
            "id": "fa751da5-32c0-471a-9d21-953850073277",
            "actions": [
                {
                    "name": "ClickEmEnemies",
                    "type": "Button",
                    "id": "7c3b51b7-7405-4d3b-b1f2-8c5934c992c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50c7b8e8-15c8-4056-bed6-40b837b0323f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickEmEnemies",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}